lint clean up