@@ -1,6 +1,5 @@
 package com.example.chaos.scouting2020;
 
-import android.support.v7.app.AppCompatActivity;
 import android.os.Bundle;
 import android.view.Gravity;
 import android.view.View;
@@ -9,7 +8,6 @@ import android.widget.TableLayout;
 import android.widget.TableRow;
 import android.widget.TextView;
 
-import java.util.ArrayList;
 import java.util.List;
 
 public class ReportFiltersActivity extends BaseActivity {
@@ -108,7 +106,7 @@ public class ReportFiltersActivity extends BaseActivity {
             row.addView(dataNumberView);
 
             // add check box to row
-            final Integer TeamNumber = new Integer(team.TeamNumber);
+            final Integer TeamNumber = Integer.valueOf(team.TeamNumber);
             CheckBox dataBox = new CheckBox(this);
             dataBox.setLayoutParams(lpItem);
             dataBox.setChecked(FilteredTeamNumberList.contains(TeamNumber));
